force-app/main/default/objects/Account/fields/mesoregiao__c.field-meta.xml
<CustomField>
    <fullName>mesoregiao__c</fullName>
    <label>Meso Região</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Representante__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CACHOEIRO DE ITAPEMIRIM</fullName>
            </value>
            <value>
                <fullName>COLATINA</fullName>
            </value>
            <value>
                <fullName>JEQUITINHONA</fullName>
            </value>
            <value>
                <fullName>LINHARES</fullName>
            </value>
            <value>
                <fullName>METROPOLITANA DE BELO HORIZONTE</fullName>
            </value>
            <value>
                <fullName>RIO DE JANEIRO</fullName>
            </value>
            <value>
                <fullName>VALE DO RIO DOCE</fullName>
            </value>
            <value>
                <fullName>VITORIA</fullName>
            </value>
            <value>
                <fullName>ZONA DA MATA</fullName>
            </value>
            <value>
                <fullName>BRASILIA</fullName>
            </value>
            <value>
                <fullName>CAMPO GRANDE</fullName>
            </value>
            <value>
                <fullName>CUIABA</fullName>
            </value>
            <value>
                <fullName>DOURADOS</fullName>
            </value>
            <value>
                <fullName>JI-PARANA</fullName>
            </value>
            <value>
                <fullName>PORTO VELHO</fullName>
            </value>
            <value>
                <fullName>RIO BRANCO</fullName>
            </value>
            <value>
                <fullName>SINOP</fullName>
            </value>
            <value>
                <fullName>FORTALEZA</fullName>
            </value>
            <value>
                <fullName>NATAL</fullName>
            </value>
            <value>
                <fullName>SAO LUIS</fullName>
            </value>
            <value>
                <fullName>TERESINA</fullName>
            </value>
            <value>
                <fullName>ARACAJU</fullName>
            </value>
            <value>
                <fullName>FEIRA DE SANTANA</fullName>
            </value>
            <value>
                <fullName>JOAO PESSOA</fullName>
            </value>
            <value>
                <fullName>MACEIO</fullName>
            </value>
            <value>
                <fullName>RECIFE</fullName>
            </value>
            <value>
                <fullName>SALVADOR</fullName>
            </value>
            <value>
                <fullName>BELEM</fullName>
            </value>
            <value>
                <fullName>GOIANIA</fullName>
            </value>
            <value>
                <fullName>LUZIANIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>