force-app/main/default/objects/Account/fields/Mesorregiao__c.field-meta.xml
<CustomField>
    <fullName>Mesorregiao__c</fullName>
    <formula>CidadeMesorrregiaoConta__r.Mesorregiao__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mesorregião</label>
    <type>Text</type>
</CustomField>