force-app/main/default/objects/Account/fields/Natureza_de_Operacao__c.field-meta.xml
<CustomField>
    <fullName>Natureza_de_Operacao__c</fullName>
    <label>Natureza de Operação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>