force-app/main/default/objects/Account/fields/Nome_do_contato_principal__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_contato_principal__c</fullName>
    <label>Nome do contato principal</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>