force-app/main/default/objects/Account/fields/NomeAbreviado__c.field-meta.xml
<CustomField>
    <fullName>NomeAbreviado__c</fullName>
    <label>Nome Abreviado</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>