force-app/main/default/objects/Account/fields/NomeMatrizTemporaria__c.field-meta.xml
<CustomField>
    <fullName>NomeMatrizTemporaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo temporário de armazenamento no momento da conversão do Lead do campo Matriz de lead.</description>
    <label>Nome da Matriz Temporária</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>