force-app/main/default/objects/Account/fields/O_cliente_fara_compra_mensal_de_2200__c.field-meta.xml
<CustomField>
    <fullName>O_cliente_fara_compra_mensal_de_2200__c</fullName>
    <label>O cliente fará compra mensal de R$2.200?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>