force-app/main/default/objects/Account/fields/Outras_observcoes_importantes__c.field-meta.xml
<CustomField>
    <fullName>Outras_observcoes_importantes__c</fullName>
    <label>Outras observações importantes:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>