force-app/main/default/objects/Account/fields/Parceiro_EDI_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Parceiro_EDI_Dealer__c</fullName>
    <label>Parceiro EDI (Dealer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>