force-app/main/default/objects/Account/fields/Parecer_da_area_financeira__c.field-meta.xml
<CustomField>
    <fullName>Parecer_da_area_financeira__c</fullName>
    <label>Parecer da área financeira</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>