force-app/main/default/objects/Account/fields/Pertence_a_um_grupo_econ_mico__c.field-meta.xml
<CustomField>
    <fullName>Pertence_a_um_grupo_econ_mico__c</fullName>
    <label>Pertence a um grupo econômico?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>