force-app/main/default/objects/Account/fields/Produto_KEKO_que_Cliente_Compra__c.field-meta.xml
<CustomField>
    <fullName>Produto_KEKO_que_Cliente_Compra__c</fullName>
    <label>Produto KEKO que Cliente Compra</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NENHUM</fullName>
            </value>
            <value>
                <fullName>SANTANTÔNIO</fullName>
            </value>
            <value>
                <fullName>ENGATE DE REBOQUE</fullName>
            </value>
            <value>
                <fullName>ESTRIBO</fullName>
            </value>
            <value>
                <fullName>CAPOTA LONA</fullName>
            </value>
            <value>
                <fullName>CAPOTA RÍGIDA</fullName>
            </value>
            <value>
                <fullName>KIT VEDAÇÃO</fullName>
            </value>
            <value>
                <fullName>RENOVADOR LONA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>