force-app/main/default/objects/Account/fields/qtde_c1__c.field-meta.xml
<CustomField>
    <fullName>qtde_c1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantas peças compra da concorrência?</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>