force-app/main/default/objects/Account/fields/qtde_ko1__c.field-meta.xml
<CustomField>
    <fullName>qtde_ko1__c</fullName>
    <label>Quantas peças Sto compra Keko/Original?</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>