force-app/main/default/objects/Account/fields/Qual_o_nome_do_Grupo__c.field-meta.xml
<CustomField>
    <fullName>Qual_o_nome_do_Grupo__c</fullName>
    <label>Qual o nome do Grupo?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>