force-app/main/default/objects/Account/fields/Qual_o_tamanho_da_cidade_onde_ela_esta__c.field-meta.xml
<CustomField>
    <fullName>Qual_o_tamanho_da_cidade_onde_ela_esta__c</fullName>
    <label>Qual o tamanho da cidade onde ela está?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>