force-app/main/default/objects/Account/fields/Quantos_funcion_rios_aproximadamente_o__c.field-meta.xml
<CustomField>
    <fullName>Quantos_funcion_rios_aproximadamente_o__c</fullName>
    <label>Quantos funcionários tem?</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>