force-app/main/default/objects/Account/fields/Quantos_vendedores_e_instaladores_tem__c.field-meta.xml
<CustomField>
    <fullName>Quantos_vendedores_e_instaladores_tem__c</fullName>
    <label>Quantos vendedores e instaladores tem?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>