force-app/main/default/objects/Account/fields/Ramo_de_Atividade__c.field-meta.xml
<CustomField>
    <fullName>Ramo_de_Atividade__c</fullName>
    <inlineHelpText>Lojista: negócio B2C, voltado a vender e instalar acessórios para o consumidor final.
Distribuidor: é um negócio B2B, voltado a atender as lojas multimarcas do setor, faz compras de grandes volumes e não atende consumidor final.
Autorizada: revenda de veículos autorizada pela montadora que também vende acessórios.
E-commerce: negócio B2C, voltado a vender acessórios para o consumidor final pela internet.</inlineHelpText>
    <label>Ramo de Atividade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lojista</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Autorizada</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>