force-app/main/default/objects/Account/fields/Recebe_Nota_Fiscal_Eletronica__c.field-meta.xml
<CustomField>
    <fullName>Recebe_Nota_Fiscal_Eletronica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recebe Nota Fiscal Eletrônica</label>
    <type>Checkbox</type>
</CustomField>