force-app/main/default/objects/Account/fields/Receita_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Receita_Padrao__c</fullName>
    <label>Receita Padrão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>