force-app/main/default/objects/Account/fields/Representante__c.field-meta.xml
<CustomField>
    <fullName>Representante__c</fullName>
    <label>Representante</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GE SPCAP</fullName>
            </value>
            <value>
                <fullName>GE SUL</fullName>
            </value>
            <value>
                <fullName>GE MG/RJ/ES</fullName>
            </value>
            <value>
                <fullName>GE SPCAMP</fullName>
            </value>
            <value>
                <fullName>GE SPR.PRETO</fullName>
            </value>
            <value>
                <fullName>VI SUL/SP</fullName>
            </value>
            <value>
                <fullName>VI CENT/NORT</fullName>
            </value>
            <value>
                <fullName>VI NORD/SUD</fullName>
            </value>
            <value>
                <fullName>GE MT/RO/AC</fullName>
            </value>
            <value>
                <fullName>GE NORD CE</fullName>
            </value>
            <value>
                <fullName>GE NORD PE</fullName>
            </value>
            <value>
                <fullName>GE NORT/GODF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>