force-app/main/default/objects/Account/fields/RepresentanteMesorregiao__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteMesorregiao__c</fullName>
    <formula>CidadeMesorrregiaoConta__r.Mesorregiao__r.Representante__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representante</label>
    <type>Text</type>
</CustomField>