force-app/main/default/objects/Account/fields/Se_a_loja_quer_comprar_KEKO_por_que__c.field-meta.xml
<CustomField>
    <fullName>Se_a_loja_quer_comprar_KEKO_por_que__c</fullName>
    <label>Se a loja quer comprar KEKO, por que?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>