force-app/main/default/objects/Account/fields/Sem_atividade_dias__c.field-meta.xml
<CustomField>
    <fullName>Sem_atividade_dias__c</fullName>
    <formula>(IF(ISBLANK(LastActivityDate), 999, today() - LastActivityDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sem atividade há (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>