force-app/main/default/objects/Account/fields/sit_financ__c.field-meta.xml
<CustomField>
    <fullName>sit_financ__c</fullName>
    <label>Situação Financeira</label>
    <type>TextArea</type>
</CustomField>