force-app/main/default/objects/Account/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <description>Descreve a situação do CNPJ.</description>
    <label>Situacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>