force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>CKR (Cliente Keko Recuperação)</fullName>
            </value>
            <value>
                <fullName>Perdido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>