force-app/main/default/objects/Account/fields/statusIntegracao__c.field-meta.xml
<CustomField>
    <fullName>statusIntegracao__c</fullName>
    <description>Exibe uma mensagem visual indicando o status da integração Totvs.</description>
    <formula>IF(IntegracaoTotvs__c,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Sucesso na Integração&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Falha na Integração&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da Integração com Totvs</label>
    <type>Text</type>
</CustomField>