force-app/main/default/objects/Account/fields/Tabela_de_Preco__c.field-meta.xml
<CustomField>
    <fullName>Tabela_de_Preco__c</fullName>
    <label>Tabela de Preço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>