force-app/main/default/objects/Account/fields/Telefone2__c.field-meta.xml
<CustomField>
    <fullName>Telefone2__c</fullName>
    <label>Telefone2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>