force-app/main/default/objects/Account/fields/Telefone_fixo__c.field-meta.xml
<CustomField>
    <fullName>Telefone_fixo__c</fullName>
    <label>Telefone fixo</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>