force-app/main/default/objects/Account/fields/temOportunidade__c.field-meta.xml
<CustomField>
    <fullName>temOportunidade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tem Oportunidade</label>
    <type>Checkbox</type>
</CustomField>