force-app/main/default/objects/Account/fields/TotvsIntegrationDetails__c.field-meta.xml
<CustomField>
    <fullName>TotvsIntegrationDetails__c</fullName>
    <description>Este campo armazena informações relacionadas à integração com o sistema TOTVS.</description>
    <inlineHelpText>Este campo armazena as informações retornadas pela API do TOTVS em caso de não ter sucesso durante a integração com o sistema TOTVS. Utilize-o para rastrear e solucionar problemas de comunicação entre as plataformas.</inlineHelpText>
    <label>Informação sobre integração TOTVS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>