force-app/main/default/objects/Account/fields/Transportadora__c.field-meta.xml
<CustomField>
    <fullName>Transportadora__c</fullName>
    <label>Transportadora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>teste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>