force-app/main/default/objects/Account/fields/Usuario_Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário Responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>