force-app/main/default/objects/Account/fields/Validacao_da_Condico_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Validacao_da_Condico_de_Pagamento__c</fullName>
    <label>Validação da Condição de Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>