force-app/main/default/objects/Account/fields/Validacao_do_Codigo_Suframa__c.field-meta.xml
<CustomField>
    <fullName>Validacao_do_Codigo_Suframa__c</fullName>
    <label>Validação do Código Suframa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>