force-app/main/default/objects/Account/fields/Valor_M_KEKO__c.field-meta.xml
<CustomField>
    <fullName>Valor_M_KEKO__c</fullName>
    <label>Valor Compra Média Mensal KEKO</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>