force-app/main/default/objects/Account/recordTypes/E_commerce_B2B.recordType-meta.xml
<RecordType>
    <fullName>E_commerce_B2B</fullName>
    <active>true</active>
    <label>E-commerce B2B</label>
</RecordType>