force-app/main/default/objects/Account/recordTypes/E_commerce_B2C.recordType-meta.xml
<RecordType>
    <fullName>E_commerce_B2C</fullName>
    <active>true</active>
    <label>E-commerce B2C</label>
</RecordType>