force-app/main/default/objects/Account/recordTypes/Montadora.recordType-meta.xml
<RecordType>
    <fullName>Montadora</fullName>
    <active>true</active>
    <label>Montadora</label>
</RecordType>