force-app/main/default/objects/Account/recordTypes/Varejo.recordType-meta.xml
<RecordType>
    <fullName>Varejo</fullName>
    <active>true</active>
    <label>Varejo</label>
</RecordType>