force-app/main/default/objects/Account/validationRules/ComprimentoCampoNomeConta.validationRule-meta.xml
<ValidationRule>
    <fullName>ComprimentoCampoNomeConta</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &gt; 12</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Nome da conta não pode ter mais de 12 caracteres.</errorMessage>
</ValidationRule>