force-app/main/default/objects/Account/validationRules/ValidacaoEnderecoCampoCidade.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoEnderecoCampoCidade</fullName>
    <active>true</active>
    <description>Garante que o campo cidade esteja preenchido antes de salvar o registro.</description>
    <errorConditionFormula>ISBLANK(BillingCity)</errorConditionFormula>
    <errorMessage>O campo cidade não pode estar vazio.</errorMessage>
</ValidationRule>